# cslol-manager

./: CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json
cslol-tools/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  cslol-diag.vcxproj  cslol-diag.vcxproj.filters  cslol-lib.vcxproj  cslol-lib.vcxproj.filters  cslol-tools.sln  mod-tools.vcxproj  mod-tools.vcxproj.filters  wad-extract.vcxproj  wad-extract.vcxproj.filters  wad-make.vcxproj  wad-make.vcxproj.filters
cslol-tools/dep/: CMakeLists.txt  fmt.vcxproj  fmt.vcxproj.filters  libdeflate.vcxproj  libdeflate.vcxproj.filters  xxhash.vcxproj  xxhash.vcxproj.filters  zstd.vcxproj  zstd.vcxproj.filters
cslol-tools/dep/miniz/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  miniz.pc  miniz.sln  miniz.vcxproj  miniz.vcxproj.filters
src/: CSLOLTools.cpp  CSLOLTools.h  CSLOLToolsImpl.cpp  main.cpp
src/qml/: CSLOLDialogErrorUser.qml  CSLOLDialogGame.qml  CSLOLDialogLoLPath.qml  CSLOLDialogNewModImage.qml  CSLOLDialogNewModRAWFolder.qml  CSLOLDialogSuccess.qml  CSLOLModsView.qml  CSLOLStatusBar.qml  CSLOLToolBar.qml  CSLOLToolTip.qml  main.qml  qml.qrc
